--- a/translations/en.yml
+++ b/translations/en.yml
@@ -14,6 +14,9 @@ auth:
     manager_role_required: "Manager role required"
     admin_role_required: "Admin role required"
     insufficient_permissions: "Insufficient permissions"
+    missing_refresh_token: "Missing refresh token"
+    invalid_refresh_token: "Invalid refresh token"
+    expired_refresh_token: "Refresh token has expired"
 users:
   validators:
     username:
