feat: add mail service

--- a/translations/en.yml
+++ b/translations/en.yml
@@ -18,6 +18,11 @@ auth:
     missing_refresh_token: "Missing refresh token"
     invalid_refresh_token: "Invalid refresh token"
     expired_refresh_token: "Refresh token has expired"
+    invalid_token_type: "Invalid token type"
+    expired_token: "Token has expired"
+    email_not_confirmed: "Email address not confirmed"
+    invalid_credentials: "Invalid credentials"
+    email_already_confirmed: "Email address already confirmed"
 users:
   validators:
     username:
@@ -30,6 +35,9 @@ users:
   errors:
       user_already_exists: "User with this email address already exists."
       username_already_exists: "User with this username already exists."
+      invalid_current_password: "Invalid current password."
+      new_email_same_as_current: "New email address is the same as the current one."
+      email_already_exists: "User with this email address already exists."
 files:
   errors:
     upload: "File upload failed"
