--- a/translations/pl.yml
+++ b/translations/pl.yml
@@ -18,6 +18,11 @@ auth:
     missing_refresh_token: "Brak tokena odświeżania"
     invalid_refresh_token: "Nieprawidłowy token odświeżania"
     expired_refresh_token: "Token odświeżania wygasł"
+    invalid_token_type: "Nieprawidłowy typ tokenu"
+    expired_token: "Token wygasł"
+    email_not_confirmed: "Adres e-mail nie został potwierdzony"
+    invalid_credentials: "Nieprawidłowe dane uwierzytelniające"
+    email_already_confirmed: "Adres e-mail został już potwierdzony"
 users:
   validators:
     username:
@@ -30,6 +35,9 @@ users:
   errors:
     user_already_exists: "Użytkownik o podanym adresie e-mail już istnieje."
     username_already_exists: "Użytkownik o podanej nazwie użytkownika już istnieje."
+    invalid_current_password: "Nieprawidłowe aktualne hasło."
+    new_email_same_as_current: "Nowy adres e-mail jest taki sam jak aktualny."
+    email_already_exists: "Użytkownik o podanym adresie e-mail już istnieje."
 files:
   errors:
     upload: "Wystąpił błąd podczas przesyłania pliku"
